1.基于Telecom framework 实现自定义视频电话弹窗 2.添加取消通话，撤销童话等待界面 3.锁屏 service 拉活

--- a/app/src/main/res/layout/activity_phone.xml
+++ b/app/src/main/res/layout/activity_phone.xml
@@ -34,7 +34,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:text="测试跳转"
         app:layout_constraintTop_toBottomOf="@+id/switch_default_phone_call"
+        />
+
+    <Button
+        android:id="@+id/bt1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="打开锁屏显示 及 后台弹出"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bt"
+        />
+
+    <Button
+        android:id="@+id/bt2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="允许修改系统设置"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bt1"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
