[铃声]添加Log 工具类，添加联系人界面

--- a/app/src/main/res/layout/activity_phone.xml
+++ b/app/src/main/res/layout/activity_phone.xml
@@ -56,4 +56,13 @@
         app:layout_constraintTop_toBottomOf="@+id/bt1"
         />
 
+    <Button
+        android:id="@+id/bt3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="联系人列表"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bt2"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
