--- a/app/src/main/res/layout/activity_phone.xml
+++ b/app/src/main/res/layout/activity_phone.xml
@@ -6,55 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".phone.PhoneActivity">
 
-
-    <Switch
-        android:id="@+id/switch_call_listener"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tv_set_ring"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="16dp"
-        android:text="电话监听服务控制" />
-
-    <Switch
-        android:id="@+id/switch_default_phone_call"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch_call_listener"
-        android:text="设为默认电话应用" />
-
-    <Button
-        android:id="@+id/bt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:text="测试跳转"
-        app:layout_constraintTop_toBottomOf="@+id/switch_default_phone_call"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="设置电话权限"
+        android:textSize="18sp"
+        android:textColor="@android:color/black"
         />
 
-    <Button
-        android:id="@+id/bt1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="打开锁屏显示 及 后台弹出"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt"
-        />
 
-    <Button
-        android:id="@+id/bt2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="允许修改系统设置"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt1"
-        />
 
     <Button
         android:id="@+id/bt3"
@@ -62,7 +27,9 @@
         android:layout_height="wrap_content"
         android:text="联系人列表"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt2"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_set_ring"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
