--- a/app/src/main/res/layout/activity_phone.xml
+++ b/app/src/main/res/layout/activity_phone.xml
@@ -15,20 +15,21 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="设置电话权限"
+        android:padding="10dp"
         android:textSize="18sp"
         android:textColor="@android:color/black"
         />
 
-
-
-    <Button
+    <TextView
         android:id="@+id/bt3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="联系人列表"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="10dp"
+        android:padding="10dp"
+        android:textSize="18sp"
+        android:textColor="@android:color/black"
         app:layout_constraintTop_toBottomOf="@+id/tv_set_ring"
         />
 
