--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,8 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="SetRingProgressDialog" parent="PromptDialog">
+        <item name="android:backgroundDimAmount">0.5</item>
+    </style>
+
 </resources>
