--- a/app/src/main/res/layout/dialog_set_ring_progress.xml
+++ b/app/src/main/res/layout/dialog_set_ring_progress.xml
@@ -16,15 +16,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
     
-    <com.preface.megatron.widget.ArcProgressBar
+    <com.maiya.leetcode.widget.ArcProgressBar
         android:id="@+id/progress"
         android:layout_width="56dp"
         android:layout_height="56dp"
         android:layout_marginTop="13dp"
-        android:textColor="@color/white"
-        android:textSize="@dimen/sp_15"
-        app:defProgressColor="@color/color_666666"
-        app:currProgressColor="@color/white"
+        android:textColor="@android:color/white"
+        android:textSize="15sp"
+        app:defProgressColor="#666666"
+        app:currProgressColor="@android:color/white"
         app:defProgressWidth="2dp"
         app:currProgressWidth="3dp"
         app:layout_constraintLeft_toLeftOf="@+id/background"
@@ -36,8 +36,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="设置中..."
-        android:textColor="@color/white"
-        android:textSize="@dimen/sp_13"
+        android:textColor="@android:color/white"
+        android:textSize="13sp"
         android:layout_marginBottom="14dp"
         app:layout_constraintLeft_toLeftOf="@+id/background"
         app:layout_constraintRight_toRightOf="@+id/background"
