--- a/app/src/main/res/layout/dialog_set_ring_progress.xml
+++ b/app/src/main/res/layout/dialog_set_ring_progress.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -43,4 +43,4 @@
         app:layout_constraintRight_toRightOf="@+id/background"
         app:layout_constraintBottom_toBottomOf="@+id/background"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
