--- a/app/src/main/res/layout/activity_phone_call.xml
+++ b/app/src/main/res/layout/activity_phone_call.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#162131">
 
-    <CallHeaderView
+    <com.maiya.call.phone.view.callheader.CallHeaderView
         android:id="@+id/caller_header_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,7 +23,7 @@
         android:drawableTop="@drawable/ic_caller_keyboard"
         android:gravity="center_horizontal"
         android:text="拨号键盘"
-        android:textColor="@color/_99ffffff"
+        android:textColor="#99ffffff"
         android:textSize="@dimen/sp_16"
         app:layout_constraintBottom_toTopOf="@+id/cb_hold"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -121,7 +121,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/iv_hand_up" />
 
-    <android.support.constraint.Group
+    <androidx.constraintlayout.widget.Group
         android:id="@+id/group_caller_hide_keyboard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -132,7 +132,7 @@
         android:id="@+id/tv_key_input_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         android:textSize="27sp"
         app:layout_constraintBottom_toTopOf="@+id/rv_caller_keyboard"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -141,7 +141,7 @@
         app:layout_constraintVertical_bias="0.47 "
         tools:text="888" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_caller_keyboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -169,7 +169,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/iv_hand_up" />
 
-    <android.support.constraint.Group
+    <androidx.constraintlayout.widget.Group
         android:id="@+id/group_caller_show_keyboard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -177,7 +177,7 @@
         app:constraint_referenced_ids="tv_key_input_content
         , rv_caller_keyboard, tv_hide_keyboard" />
 
-    <com.preface.megatron.tel.view.CallHoldView
+    <CallHoldView
         android:id="@+id/call_hold_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
