--- a/app/src/main/res/drawable/shape_rectangle_000000_10.xml
+++ b/app/src/main/res/drawable/shape_rectangle_000000_10.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#000000" />
+    <solid android:color="@android:color/holo_blue_bright" />
     <corners android:radius="10dp" />
 
 </shape>
